# hunty-ai

./: .env.example  .gitignore  README.md  clear.sh  colsrc.sh  deploy.sh  dev.md  docker-compose.yml  jmix-studio.xml  pyproject.toml
.github/workflows/: ci-cd.yml
.run/: Hunty-hr Jmix Application.run.xml  hunty-interview-backend.run.xml  hunty-interview-ui.run.xml
hunty-hr/: .gitignore  Dockerfile  build.gradle  package-lock.json  settings.gradle
hunty-hr/src/main/frontend/themes/hunty-hr/: styles.css
hunty-hr/src/main/java/ru/javaboys/huntyhr/: HuntyHrApplication.java
hunty-hr/src/main/java/ru/javaboys/huntyhr/ai/: AiExtractionService.java  OpenAiConfig.java  OpenAiService.java  OpenAiServiceImpl.java  RankingService.java
hunty-hr/src/main/java/ru/javaboys/huntyhr/config/: S3ClientConfig.java  (+2 more)
hunty-hr/src/main/resources/: application-prod.properties  application.properties
hunty-hr/src/main/resources/ru/javaboys/huntyhr/: menu.xml  messages_ru.properties
hunty-interview-backend/: .dockerignore  .gitignore  Dockerfile  README.md  init.sh  main.py  pyproject.toml  requirements.txt  run.sh  test_main.http
hunty-interview-backend/app/: config.py  db.py  s3.py
hunty-interview-backend/app/ai/: agent.py  planner.py
hunty-interview-backend/app/repositories/: storage.py
hunty-interview-backend/app/video_processing/: process.py
hunty-interview-backend/static/: video-analise.html
hunty-interview-ui/: .gitignore  Dockerfile  index.html  mock-backend.js  nginx.conf  package-lock.json  package.json  vite.config.ts
hunty-interview-ui/src/: App.tsx  MeetingApp.tsx  custom.css  main.tsx
postgres/initdb/: init-db.sh
test-data/resumes/: Образец резюме 2 Бизнес аналитик.rtf
(+101 files in other folders)
