[project]
name = "hunty-interview-backend"
version = "0.1.0"
description = "AI interview assistant"
authors = [
    {name = "Java Boys",email = "info@javaboys.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "boto3 (>=1.40.25,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "webrtcvad (>=2.0.10,<3.0.0)",
    "vosk (>=0.3.45,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
